refactor: modernize deprecated API calls to use current Java standards
- Replace deprecated Locale constructor with Locale.of() factory method
- Replace deprecated Date.getHours/Minutes/Seconds() with Calendar.get() methods
- Replace deprecated File.toURL() with File.toURI().toURL() for proper URL encoding
- Remove unused Date import from BlueSystemTimer